add v basic auth with jwt

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+        <!-- lombok to create boilerplate code with annotations-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
