auth complete, need to add separate controllers for applicants and recruiters.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=3000
-spring.datasource.url=jdbc:postgresql://localhost:5432/ats_test
+spring.datasource.url=jdbc:postgresql://localhost:5432/ats
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=admin
